--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "ts-jest": "^28.0.5",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4"
+  },
+  "engines": {
+    "node": ">=16.x.x"
   }
 }
