--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ LEAD_SERVICE_HTTP_SERVER_PORT=3001
 MAILTRAP_USER="USER"
 MAILTRAP_PASS="PASS"
 INTERNAL_EMAIL="internal@email.com"
+DEBUG_ROUTES="false"
