--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express": "^4.18.2",
     "kafkajs": "^2.2.3",
     "nodemailer": "^6.8.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.0.0",
