general folder structure changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,8 @@
       "@application/*": [
         "application/*"
       ],
-      "@entities/*": [
-        "entities/*"
+      "@domain/*": [
+        "domain/*"
       ],
       "@presentation/*": [
         "presentation/*"
