--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-import": "2.22.0",
     "eslint-plugin-prettier": "3.1.4",
     "jest": "28.1.2",
+    "mockdate": "^3.0.5",
     "prettier": "^2.2.1",
     "rollup": "^3.10.1",
     "ts-jest": "^28.0.5",
