--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:watch": "jest --passWithNoTests --silent --noStackTrace --runInBand --watch",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:staged": "yarn test -o",
-    "test:ci": "yarn test --coverage"
+    "test:ci": "yarn test --coverage",
+    "test:coverage": "jest --coverage --collectCoverageFrom='src/**/*.ts'"
   },
   "dependencies": {
     "date-fns": "^2.29.3",
