chore: add new script command to check format

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "node dist/index.js",
     "build": "rollup -c rollup.config.js",
     "type-check": "tsc --pretty --noEmit",
+    "format-check": "yarn eslint --quiet 'src/*/**/*.ts'",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:watch": "jest --passWithNoTests --silent --noStackTrace --runInBand --watch",
     "test:verbose": "jest --passWithNoTests --runInBand",
