chore: add new rule to style guide

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,9 @@
         "argsIgnorePattern": "^_"
       }
     ],
+    "@typescript-eslint/explicit-function-return-type": [
+      "error"
+    ],
     "no-unused-vars": "off",
     "prettier/prettier": "error",
     "import/prefer-default-export": "off",
@@ -41,6 +44,16 @@
       "always"
     ]
   },
+  "overrides": [
+    {
+      "files": "*.test.ts",
+      "rules": {
+        "@typescript-eslint/explicit-function-return-type": [
+          "off"
+        ]
+      }
+    }
+  ],
   "settings": {
     "import/extensions": [
       ".ts",
