--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "test:watch": "jest --passWithNoTests --silent --noStackTrace --runInBand --watch",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:staged": "yarn test -o",
-    "test:ci": "yarn test --coverage",
-    "test:coverage": "jest --coverage --collectCoverageFrom='src/**/*.ts'"
+    "test:coverage": "yarn test --coverage",
+    "test:ci": "jest --coverage --collectCoverageFrom='src/**/*.ts'"
   },
   "dependencies": {
     "date-fns": "^2.29.3",
@@ -37,6 +37,7 @@
     "@types/jest": "28.1.2",
     "@types/node": "^18.11.18",
     "@types/nodemailer": "^6.4.7",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
@@ -49,6 +50,7 @@
     "mockdate": "^3.0.5",
     "prettier": "^2.2.1",
     "rollup": "^3.10.1",
+    "supertest": "^6.3.3",
     "ts-jest": "^28.0.5",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4"
