--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,9 @@ NODE_ENV="development"
 
 KAFKA_ADDRESS="localhost:9092"
 KAFKAJS_NO_PARTITIONER_WARNING=true
-USER_SERVICE_HTTP_SERVER_PORT=3000
-LEAD_SERVICE_HTTP_SERVER_PORT=3001
+HTTP_SERVER_PORT=3001
 
-MAILTRAP_USER="USER"
-MAILTRAP_PASS="PASS"
+MAILTRAP_USER="3a1159e5f733fd"
+MAILTRAP_PASS="30789f2f4b962c"
 INTERNAL_EMAIL="internal@email.com"
-DEBUG_ROUTES="false"
+DEBUG_ROUTES=true
