--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ NODE_ENV="development"
 
 KAFKA_ADDRESS="localhost:9092"
 KAFKAJS_NO_PARTITIONER_WARNING=true
+KAFKAJS_GROUP_ID='my-app-group'
 HTTP_SERVER_PORT=3001
 
 MAILTRAP_USER="3a1159e5f733fd"
