--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,10 @@ NODE_ENV="development"
 
 HTTP_SERVER_PORT=3001
 
-KAFKA_ADDRESS="localhost:9092"
 KAFKAJS_NO_PARTITIONER_WARNING=true
-KAFKAJS_GROUP_ID='my-app-group'
-KAFKAJS_CLIENT_ID='foo-service-app'
+KAFKA_ADDRESS="localhost:9092"
+KAFKA_GROUP_ID='my-app-group'
+KAFKA_CLIENT_ID='foo-service-app'
 
 MAILTRAP_USER="3a1159e5f733fd"
 MAILTRAP_PASS="30789f2f4b962c"
